--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,7 +13,8 @@ FOREACH(child ${children})
             add_executable(${PRJPREFIX_LOWER}_${child}_unit_test ${SRCS})
             target_include_directories(${PRJPREFIX_LOWER}_${child}_unit_test PUBLIC ${${PRJPREFIX}_ROOT_DIR}/include)
             target_link_libraries(${PRJPREFIX_LOWER}_${child}_unit_test gtest gtest_main)
-            add_test(${PRJPREFIX_LOWER}_${child}_UTests ./${PRJPREFIX_LOWER}_${child}_unit_test  --gtest_output=xml:test/${child}_UTest_Report.xml)
+            target_link_libraries(${PRJPREFIX_LOWER}_${child}_unit_test ${CMAKE_PROJECT_NAME}_lib)
+            add_test(${PRJPREFIX_LOWER}_${child}_UTests ./${PRJPREFIX_LOWER}_${child}_unit_test --gtest_output=xml:test/${child}_UTest_Report.xml)
             set_tests_properties(${PRJPREFIX_LOWER}_${child}_UTests PROPERTIES TIMEOUT 3600)
         ENDIF()
     ENDIF()
