--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -66,7 +66,7 @@ if (${PRJPREFIX}_COVERAGE)
     set(COVERAGE_TITLE "Evenement Loto: couverture de tests")
     set(COVERAGE_HTML --html --html-details --html-details-syntax-highlighting --html-title ${COVERAGE_TITLE} --source-encoding utf-8)
     set(COVERAGE_FILTER -e ".*third_party/.*" -e ".*test/.*" -e ".*autogen.*" -e ".*main\.cpp")
-    set(COVERAGE_OPTION -bups --exclude-throw-branches --exclude-unreachable-branches --exclude-lines-by-pattern ".* delete .*")
+    set(COVERAGE_OPTION -buds -j 4 --exclude-throw-branches --exclude-unreachable-branches --exclude-lines-by-pattern ".*---UNCOVER---.*")
     if ("d${${PRJPREFIX}_GCOV}" STREQUAL "d")
         set(COVERAGE_GCOV)
     else ()
