--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(${PRJPREFIX}_ROOT_DIR "${PROJECT_SOURCE_DIR}")
 set(CMAKE_INSTALL_PREFIX ${PROJECT_BUILD_DIR}/Install)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
+set(CMAKE_VERBOSE_MAKEFILE off)
 #
 # ---=== Supported OS ===---
 #
