correction des tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 if (WIN32)
-    set(CMAKE_PREFIX_PATH ${BASE_QT_DIR})
+    set(CMAKE_PREFIX_PATH ${${PRJPREFIX}_QT_DIR})
     set(QT_INSTALL_PATH "${CMAKE_PREFIX_PATH}")
     if (NOT EXISTS "${QT_INSTALL_PATH}/bin")
         set(QT_INSTALL_PATH "${QT_INSTALL_PATH}/..")
