amélioration visuelle des tirages et nettoyage de code

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -20,6 +20,15 @@ find_package(fmt 8 REQUIRED)
 message(STATUS "Found fmt")
 target_link_libraries(${CMAKE_PROJECT_NAME}_lib PUBLIC fmt)
 
+#spdlog
+find_package(spdlog REQUIRED)
+message(STATUS "Found spdlog")
+target_link_libraries(${CMAKE_PROJECT_NAME}_lib PUBLIC spdlog)
+target_compile_definitions(${CMAKE_PROJECT_NAME}_lib PUBLIC SPDLOG_FMT_EXTERNAL)
+
+#magic enum
+target_include_directories(${CMAKE_PROJECT_NAME}_lib PUBLIC ${MAGIC_ENUM_INCLUDE_DIR})
+message(STATUS "Found magic_enum in ${MAGIC_ENUM_INCLUDE_DIR}")
 #
 # ----====  UI Library ====----
 #
