--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,7 +29,7 @@ FOREACH (child ${children})
             set(${child}_exe ${PRJPREFIX_LOWER}_${child}_unit_test)
             add_executable(${${child}_exe} ${SRCS})
             target_include_directories(${${child}_exe} PUBLIC test_helper)
-            target_link_libraries(${${child}_exe} gtest gtest_main)
+            target_link_libraries(${${child}_exe} gtest)
             target_link_libraries(${${child}_exe} ${CMAKE_PROJECT_NAME}_lib)
             if (${child} MATCHES "[g]ui")
                 target_link_libraries(${${child}_exe} ${CMAKE_PROJECT_NAME}_ui)
