--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -7,3 +7,7 @@
 
 add_subdirectory(GoogleTest)
 
+#
+# Definitions for magic enum
+set(MAGIC_ENUM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/magic_enum/include CACHE PATH "path to magic enum")
+
