Working version for 2022

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ if (CMAKE_SYSTEM_NAME MATCHES "Windows")
     foreach (BASE_LIB winpthread-1 stdc++-6 gcc_s_seh-1
             fmt
             winpthread-1 freetype-6 harfbuzz-0 md4c png16-16 zlib1 bz2-1 brotlidec brotlicommon glib-2.0-0 intl-8 graphite2
-            b2-1 double-conversion icuin69 icuuc69 pcre2-16-0 icudt69 iconv-2 pcre-1
+            b2-1 double-conversion icuin71 icudt71 icuuc71 pcre2-8-0 pcre2-16-0 iconv-2 pcre-1
             )
         if (EXISTS ${COMPILER_PATH}/lib${BASE_LIB}.dll)
             add_custom_command(TARGET Package POST_BUILD
