--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,7 @@ endif ()
 FILE(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
 
 add_custom_target(All_Tests)
+find_package(GTest REQUIRED)
 
 FOREACH (child ${children})
     if (${child} MATCHES "test_helper")
@@ -22,14 +23,14 @@ FOREACH (child ${children})
         file(GLOB_RECURSE
                 SRCS
                 ${CMAKE_CURRENT_SOURCE_DIR}/${child}/*.cpp
-                )
+        )
         IF ("${SRCS} " STREQUAL " ")
             message(STATUS "Test folder '${child}' is empty, skipping")
         ELSE ()
             set(${child}_exe ${PRJPREFIX_LOWER}_${child}_unit_test)
             add_executable(${${child}_exe} ${SRCS})
             target_include_directories(${${child}_exe} PUBLIC test_helper)
-            target_link_libraries(${${child}_exe} gtest)
+            target_link_libraries(${${child}_exe} GTest::gtest)
             target_link_libraries(${${child}_exe} ${CMAKE_PROJECT_NAME}_lib)
             if (${child} MATCHES "[g]ui")
                 target_link_libraries(${${child}_exe} ${CMAKE_PROJECT_NAME}_ui)
@@ -37,7 +38,7 @@ FOREACH (child ${children})
                     target_compile_options(${${child}_exe} PRIVATE
                             -Wno-reserved-identifier
                             -Wno-missing-prototypes
-                            )
+                    )
                 endif ()
             endif ()
             if (CMAKE_SYSTEM_NAME MATCHES "Linux")
